# fractional_brownian_motion

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp
cli/: CMakeLists.txt
cli/src/: main.cpp
doxygen/: CMakeLists.txt  Doxyfile
fbm/: CMakeLists.txt
fbm/include/fbm/: fbm.hpp  generate_normal_random.hpp
fbm/include/fbm/impl/: data_1d.hpp  data_1d_out.hpp  data_2d.hpp  data_2d_out.hpp  data_3d.hpp  data_3d_out.hpp  fbm_inl.hpp  generate_normal_random_inl.hpp  is_power_of_two.hpp  variance_fbm_1d.hpp  variance_fbm_2d.hpp  variance_fbm_3d.hpp
fbm/src/: fbm.cpp  generate_normal_random.cpp
fbmpy/: CMakeLists.txt  __init__.py
fbmpy/include/fbmpy/: fbmpy.hpp
fbmpy/src/: fbmpy.cpp
fbmtest/: CMakeLists.txt
fbmtest/src/: test_fbb_1d.cpp  test_fbb_2d.cpp  test_fbb_3d.cpp  test_fbm.cpp  test_fbm_1d.cpp  test_fbm_2d.cpp  test_fbm_3d.cpp
pythontests/: plot_convergence.py  plot_single_samples.py  test_fbm.py
